# Neumann-Trend-Test

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  PHASE1_IMPROVEMENTS.md  PHASE2_IMPROVEMENTS.md  README.md  build.bat  build.sh  check-deps.bat  config.json  create-release.bat  debug-build.bat  mingw-toolchain.cmake  start-cli-app.bat  start-cli-app.sh  start-web-app.bat  start.bat  start.sh
app/: CMakeLists.txt  cli_main.cpp  web_main.cpp
apps/: cli_main.cpp  web_main.cpp
config/: config.json  translations.json
data/: standard_values.json  translations.json
data/sample/: extra_large_dataset_55_points.csv  large_dataset_45_points.csv
data/sample/ConfidenceLevel/: custom_confidence_90_example.csv  custom_confidence_90_example.json
data/sample/TestSuite/: demo.csv  extra_large_dataset_55_points.csv  large_dataset_45_points.csv  no_trend_example.csv  pharmaceutical_data.csv  trend_example.csv
docs/: BUILD.md  CONTRIBUTING.md  FAQ.md
docs/README/: README_en.md  README_zh.md
include/cli/: cli_app.h  data_editor.h  file_browser.h  terminal_ui.h  terminal_utils.h
include/core/: batch_processor.h  config.h  data_manager.h  data_visualization.h  error_handler.h  excel_reader.h  i18n.h  neumann_calculator.h  standard_values.h
include/web/: web_server.h
ref/: Table_of_Standard_W(P)_for_Neumann-Trend-Test.md  original_neumann_trend_test.cpp  standard_values.json
src/cli/: CMakeLists.txt  cli_app.cpp  data_editor.cpp  file_browser.cpp  terminal_ui.cpp  terminal_utils.cpp
src/core/: CMakeLists.txt  batch_processor.cpp  config.cpp  data_manager.cpp  data_visualization.cpp  error_handler.cpp  excel_reader.cpp  i18n.cpp  neumann_calculator.cpp  standard_values.cpp
src/web/: CMakeLists.txt  web_server.cpp
tests/: CMakeLists.txt  test_neumann.cpp
web/: neumann_trend_test.html
